# SyncFlow

./: .env  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: main.yml
src/: manage.py
src/api_integration/integrations/: amo_integration.py
src/b2b_client_orders/: apps.py  models.py  urls.py
src/b2b_client_orders/migrations/: 0001_initial.py  0002_alter_b2border_employer.py  0003_b2border_report.py  0004_alter_b2border_status.py  0005_alter_b2border_status.py  0006_alter_b2border_status.py  0007_alter_b2border_status.py  0008_b2border_employee_name_b2border_employee_phone.py  0009_b2border_city.py  0010_remove_b2border_city.py  0011_b2border_city.py  0012_remove_b2border_assigned_employee_and_more.py  0013_alter_b2border_assigned_employee.py  0014_remove_b2border_assigned_employee.py  0015_b2border_assigned_employee.py  0016_remove_b2border_assigned_employee_and_more.py  0017_remove_b2border_assigned_employee_and_more.py  (+9 more)
src/b2b_clients/: apps.py  models.py
src/b2c_client_orders/: apps.py  models.py  urls.py
src/employees/: models.py  services.py  urls.py
src/employers/: models.py  permissions.py  urls.py
src/integration/: apps.py  views.py
src/order_history/: filters.py  services.py  urls.py
src/orders/: models.py  permissions.py  services.py  urls.py
src/schedules/: models.py  services.py  urls.py
src/syncflow/: asgi.py  settings.py  urls.py  wsgi.py
src/users/: admin.py  backends.py  forms.py  managers.py  models.py  refresh_token.py  serializers.py  urls.py  validators.py  views.py
(+161 files in other folders)
